<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_15"
        android:layout_marginBottom="@dimen/dimen_10"
        android:gravity="center_vertical"
        android:text="@string/wallet_hint_account_info"
        android:textColor="#333"
        android:textSize="15sp" />

    <com.james.common.view.ILinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:orientation="vertical"
        app:ivBgColor="@color/white"
        app:ivRadius="5dp">

        <LinearLayout
            android:id="@+id/ll_wallet_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wallet_hint_balance"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_wallet_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/goods_group_manager_right_arrow"
                android:drawablePadding="10dp"
                android:text=""
                android:textColor="#999"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            style="@style/DivideLineHorizontal"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10" />

        <LinearLayout
            android:id="@+id/ll_wallet_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wallet_hint_deposit"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_wallet_deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/goods_group_manager_right_arrow"
                android:drawablePadding="10dp"
                android:text=""
                android:textColor="#999"
                android:textSize="12sp" />

        </LinearLayout>


    </com.james.common.view.ILinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_15"
        android:layout_marginBottom="@dimen/dimen_10"
        android:gravity="center_vertical"
        android:text="@string/wallet_hint_account_bind"
        android:textColor="#333"
        android:textSize="15sp" />

    <com.james.common.view.ILinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:orientation="vertical"
        app:ivBgColor="@color/white"
        app:ivRadius="5dp">
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_wallet_third_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wallet_hint_zfb"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_wallet_zfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/goods_group_manager_right_arrow"
                android:drawablePadding="10dp"
                android:text="点击设置"
                android:textColor="#999"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:visibility="gone"
            style="@style/DivideLineHorizontal"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10" />

        <LinearLayout
            android:id="@+id/ll_wallet_wechat_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wallet_hint_wechat"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_wallet_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/goods_group_manager_right_arrow"
                android:drawablePadding="10dp"
                android:text="点击设置"
                android:textColor="#999"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:visibility="gone"
            style="@style/DivideLineHorizontal"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_wallet_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wallet_hint_card"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_wallet_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/goods_group_manager_right_arrow"
                android:drawablePadding="10dp"
                android:text="点击设置"
                android:textColor="#999"
                android:textSize="12sp" />

        </LinearLayout>


    </com.james.common.view.ILinearLayout>

</LinearLayout>