<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg">


    <com.james.common.view.ILinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15"
        android:orientation="vertical"
        app:ivBgColor="@color/white"
        app:ivRadius="5dp">

        <LinearLayout
            android:id="@+id/ll_wallet_account_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wallet_account_hint_type"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_wallet_account_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/goods_group_manager_right_arrow"
                android:drawablePadding="10dp"
                android:hint="请选择"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_CACACA"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            style="@style/DivideLineHorizontal"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10" />

        <LinearLayout
            android:id="@+id/ll_wallet_account_bank_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wallet_account_hint_bank_deposit"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_wallet_account_bank_deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/goods_group_manager_right_arrow"
                android:drawablePadding="10dp"
                android:hint="请选择"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_CACACA"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            style="@style/DivideLineHorizontal"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10" />

        <LinearLayout
            android:id="@+id/ll_wallet_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_account_hint_name"
                android:textColor="#333"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_wallet_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="@dimen/dimen_10"
                android:gravity="right"
                android:hint="请输入，必填"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_CACACA"
                android:textSize="@dimen/dimen_13" />

        </LinearLayout>

        <View
            style="@style/DivideLineHorizontal"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10" />

        <LinearLayout
            android:id="@+id/ll_wallet_account_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_10"
            android:paddingVertical="@dimen/dimen_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_account_hint_bank_no"
                android:textColor="#333"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_wallet_account_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="@dimen/dimen_10"
                android:gravity="right"
                android:hint="请输入，必填"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_CACACA"
                android:textSize="@dimen/dimen_13" />

        </LinearLayout>

    </com.james.common.view.ILinearLayout>

    <com.james.common.view.ITextView
        android:id="@+id/tv_bankcard_submit"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="确定提交"
        android:textColor="@color/white"
        app:ivBgColor="@color/color_3870EA"
        app:ivRadius="19dp" />

</RelativeLayout>